fixed secondary page widget not fitting in center properly

--- a/css/secondaryPage.css
+++ b/css/secondaryPage.css
@@ -35,19 +35,16 @@ body {
 
 }
 
-.widgetRow{
-    margin: 16px;
-    text-align: center;
-}
 
 .widget {
     background-color: #78BE20;
     border: 2px solid black;
     border-radius: 15px;
-    display: block;
+    display: inline-block;
     margin: 16px;
     max-height: 100%;
     box-shadow: 12px 16px 26px 0;
+    width: 90%;
     rgba(0, 0, 0, 0.4);
 
 }
